[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Kenny Pixel Shmup/Ships/ship_0009.png" type="Texture" id=1]
[ext_resource path="res://Assets/Kenny Boardgame/PNG/Default (64px)/d6_outline.png" type="Texture" id=2]
[ext_resource path="res://Ship.gd" type="Script" id=3]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.505128, 1 ), 0.00919779, 0.00919779, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=3]

[node name="Ship" type="KinematicBody2D"]
script = ExtResource( 3 )
accel = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Left" type="StaticBody2D" parent="."]
position = Vector2( -30, 0 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Right" type="StaticBody2D" parent="."]
position = Vector2( 30, 0 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Up" type="StaticBody2D" parent="."]
position = Vector2( 0, -30 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Up"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="Down" type="StaticBody2D" parent="."]
position = Vector2( 0, 30 )
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Down"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
[connection signal="input_event" from="Left" to="." method="_on_Left_input_event"]
[connection signal="input_event" from="Right" to="." method="_on_Right_input_event"]
[connection signal="input_event" from="Up" to="." method="_on_Up_input_event"]
[connection signal="input_event" from="Down" to="." method="_on_Down_input_event"]
